--- a/stage-zero/index.html
+++ b/stage-zero/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container">
-        <div class="profile-container">
+        <div data-testid="profilePicture" class="profile-container">
 
             <div class="profile-bio">
                 <h2>Oke Kolawole</h2>
