--- a/stage-zero/index.html
+++ b/stage-zero/index.html
@@ -17,7 +17,8 @@
 <body>
 
     <div class="container">
-        <div data-testid="profilePicture" class="profile-container">
+        <div  class="profile-container">
+          <img data-testid="profilePicture" src="./assets/profile-pics.jpeg" width="100%" height="100%" alt="">
 
             <div class="profile-bio">
                 <h2 data-testid="fullName">Oke Kolawole</h2>
