--- a/stage-zero/index.html
+++ b/stage-zero/index.html
@@ -18,7 +18,9 @@
 
     <div class="container">
         <div  class="profile-container">
-          <img data-testid="profilePicture" src="./assets/profile-pics.jpeg" width="100%" height="100%" alt="">
+         <div class="profile-img">
+          <img data-testid="profilePicture" src="./assets/profile-pics.png"  alt="">
+         </div>
 
             <div class="profile-bio">
                 <h2 data-testid="fullName">Oke Kolawole</h2>
