--- a/stage-zero/index.html
+++ b/stage-zero/index.html
@@ -25,7 +25,7 @@
             <div class="profile-bio">
                 <h2 data-testid="fullName">Oke Kolawole</h2>
                 <h5 data-testid="jobTitle" class="job-title">Frontend Developer</h5>
-                <p data-testid="emailAddress">oke.kolawole@example.com</p>
+                <p data-testid="emailAddress">okekolawolesunday@gmail.com</p>
 
             </div>
 
